--- a/gb/news2008_4.md
+++ b/gb/news2008_4.md
@@ -1,19 +1,4 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/fjHps" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>生活消费</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/asdfghy6/yh/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/asdfghy6/fq/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/16/n11525661.md#1" target="_blank">排湿热消水肿怎么吃？5种食物帮你清热排水</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/16/n11525661.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/yiren-jobs-tears_412219699-150x120.jpg" align ="left"></a>食物能提供身体所需能量、维持生命，但是摄取过量则会产生不必要的能量，留在体内变成“毒”。韩国热毒专家、中医师崔容瑄表示，毒又分成“热毒”和“水毒”，热量过多产生热毒，水分过多产生水毒。那么，哪些食物可以帮助清热排水呢？五种排毒食物，清热又排水：薏仁味甘且清爽、微寒。水毒造成水肿时可吃薏仁，它也可以用来清热泻火。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月17日 2:06 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/16/n11524254.md#1" target="_blank">怀孕期间运动好处多 孕妇应该做哪些运动？</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/16/n11524254.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/6c4d616bff03cbe86049c92d032b417e-150x120.jpg" align ="left"></a>孕妇可以运动吗？孕妇应该做哪些运动？孕妇应该避免哪些运动？联新国际医院运动医学中心主治医师刘又铨指出，只要没有禁忌症、不从事剧烈活动或高风险运动，妇女在怀孕期间都应该维持运动习惯；没在运动的孕妇，也可以开始循序渐进养成运动习惯，不只对身心健康有好处，还能避免怀孕的并发症。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月16日 7:40 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/16/n11524513.md#1" target="_blank">香港抗争者成立义诊平台 解催泪弹后遗症</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/16/n11524513.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1909150619442188-150x120.jpg" align ="left"></a>香港民众在历时3个多月的“反送中”抗争中，付出了沉重的代价：有人失去生命，更多的人赔上了健康。一名前线抗争者跟十多位注册中医师组成义诊平台，并调制药剂送给前线抗争者，以化解吸入催泪烟造成的后遗症。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月16日 4:58 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/16/n11524557.md#1" target="_blank">记忆每两小时归零 美国少女每天都是同一天</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/16/n11524557.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/Fotolia_38870563_Subscription_L-150x120.jpg" align ="left"></a>美国伊利诺伊州一名少女在3个月前头部受创，此后她每天早上起床都以为那是受创那一天，更糟糕的是，她的记忆每两个小时归零，所以她每天都记不起来刚刚发生什么事或见过什么人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月16日 2:00 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/16/n11524455.md#1" target="_blank">进军全澳学校田径赛 墨尔本脑瘫儿童创奇迹</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/16/n11524455.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/competition-3480185_1920-150x120.jpg" align ="left"></a>墨尔本一名患有脑瘫的早产儿，通过顽强的毅力和坚持不懈的努力，一次次推翻了医生的断言，他的进步令所有人都感到震惊。据《太阳先驱报》报导，汤姆（Tom Roach）是一名早产儿。11年前，当他母亲在怀孕29周把他生下来时，医生说他活下来的概率很小。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月16日 12:59 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/15/n11523627.md#1" target="_blank">湖景新屋的别样生活</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/15/n11523627.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/Harmony-in-Springbank-7-150x120.jpg" align ="left"></a>落基山脉下的卡尔加里，总是跃动着大自然的脉搏，居民们享受着各种山脉湖泊的户外休闲活动、欣赏美景风光。临近山脉、名校林立的卡城西部社区一直备受注重生活品质的家庭的青睐。坐落Rocky View County的Harmony湖景社区蝉联“卡城最佳社区”荣誉，更是成了西部一颗耀眼的明珠。
-
-
-
-今年初，有着加拿大地产.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月16日 1:47 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/15/n11522574.md#1" target="_blank">英男花3年和几万美元 为1张超速罚单打官司</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/15/n11522574.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/Fotolia_59193608_Subscription_L-150x120.jpg" align ="left"></a>英国一名7旬男子花了3年的时间与几万美元的费用，为一张100多美元的超速罚单打官司，最终仍败诉。他说，他后悔花了那么多钱，因为这些钱原本是要留给儿子的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月15日 7:21 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/14/n11521725.md#1" target="_blank">每天爬楼梯10分钟 帮你减肥 还有3大好处</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/14/n11521725.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/stair-climbing-0917-150x120.jpg" align ="left"></a>出门或上下班时，面对电梯和楼梯，不妨选择爬楼梯。坚持每天爬楼梯10分钟，比不定期上健身房还有效。爬楼梯燃烧的热量，是走路的2倍。每天从住家、车站到办公大楼的爬楼梯总量可能有10～15分钟，如果都能坚持下来，可以帮你轻松减肥、预防肥胖。
-
-除此之外，爬楼梯还有如下好处：1. 提升心肺功能。2. 锻炼腿部肌肉......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月15日 9:03 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/13/n11520004.md#1" target="_blank">脚有症状别轻忽！常见足部疾病1篇看懂</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/13/n11520004.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/foot-disease_587449394-150x120.jpg" align ="left"></a>我们走路、跑步都要依赖双足。足部由26块骨骼组成，是人体构成最复杂的区域之一。但足部一旦遭遇劳损和炎症，或鞋子不合脚、糖尿病及老化问题，其功能障碍和不适就会显露出来，造成行走不便。本文汇整了六种常见足部疾病：1. 足癣（香港脚）2. 拇囊炎 3. 糖尿病足 4. 嵌甲（趾甲内生）5. 足跟骨刺 6. 足底筋膜炎......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月15日 12:26 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/13/n11518935.md#1" target="_blank">吃完大餐消化不良胃胀气？1味茶饮去油消胀气</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/13/n11518935.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/shutterstock_776688733-e1568385086395-150x120.jpg" align ="left"></a>中秋节假期间，在月饼、大餐及烤肉的应景下，若是没有节制地吃，就容易出现消化不良、胃胀气等肠胃症状。饭后不妨喝一味茶饮，帮助消化、消胀气。
 
 消胀解腻茶
@@ -47,14 +32,23 @@ RC车系是由IS房车而来，说白了就是IS车系的双门版，也即是Co
 在一般人的生活当中，最常见的垃圾就是免洗的“一次性物品”，例如：外带食物的容器、餐具、吸管、塑胶袋或纸袋，健康需求的卫生棉、尿布、卫生纸、口罩，外出使用的免洗内衣裤、纸拖鞋、抛弃式盥洗用具等。
 
 这.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月11日 5:22 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/13/n11520075.md#1" target="_blank">汽车维修问与答：下坡时引擎转速正常吗</a><br></h3>汽车维修问与答
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/11/n11513827.md#1" target="_blank">7种方法让你的家焕然一新</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/11/n11513827.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/architecture-1477100_960_720-150x120.jpg" align ="left"></a>我们许多人都喜欢住在新装修过的房子里。你知道吗？我们可以在不花很多钱、不大折腾的情况下就让你的房屋有彻底改造过的感觉。　......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月11日 5:21 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/10/n11512565.md#1" target="_blank">鸡蛋减肥又防癌 医师：这样吃最好</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/10/n11512565.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/egg_179891711-150x120.jpg" align ="left"></a>鸡蛋不仅含最优质的完全蛋白质，还有减肥、防癌等功效。医师告诉你食用鸡蛋的最佳方法。国人每人每年大约吃掉290颗蛋，一周约5.6颗。最好是吃带壳水煮的蛋，因为第一蛋白质好消化，水煮蛋的蛋白质消化率高达99.7%，第二维生素的保留最完整。有人可能喜欢生吃鸡蛋，但是生吃的消化吸收率大概只有50%而已。整颗蛋一起吃......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月11日 2:26 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/10/n11511911.md#1" target="_blank">吃货旅行 造访全球特色美食节</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/10/n11511911.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/0ed06085f0cf3a3a5e0f7f45b323a0c1-150x120.jpg" align ="left"></a>美食是许多人认识旅游地的方式，尝试各国别具特色的佳肴，是旅途中美好的享受，也带来难忘的回忆。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月11日 2:15 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/10/n11512717.md#1" target="_blank">人物专访：从穷孩子到大企业家的成功秘诀</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/10/n11512717.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/82ce4cd46d4c328e8d73c989b73317a3-150x120.jpg" align ="left"></a>一个穷得读不起书的农村孩子怎样成为了当时台湾最大电脑机械公司的执行副总经理？创业失败，穷到身无分文，债主讨债、黑道逼胁，他如何又东山再起，相继成为两家外商的台湾区总经理和亚太区CEO？在退休后再次创业，这一次他因何成功并屡获国际创新大奖，成为台湾之光？曾明国用一步一步的人生脚印谱写出了他经营企业以至人生的成功秘诀。
+.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月11日 2:10 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/11/n11513344.md#1" target="_blank">“月满南加”中秋游园会记游</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/11/n11513344.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/15356780-EA3A-4754-BE14-3CDA1DD6E4B6-150x120.jpeg" align ="left"></a>“独在异乡为异客，每逢佳节倍思亲。”对许多海外游子而言，过节，尤其是过中国人自己的节日，特别容易想念家乡。
 
-读者世超问：李先生您好！一直都很喜欢您在大纪元的栏目。感谢您无私的奉献，我的车现在也遇到了一个故障，想麻烦您给指点下。
-我的车是2015 Nissan Versa S Plus，里程 110,000左右。大概在100,000之后开始出现一个奇怪的故障，在回家的路上有一个较长的下坡路，路口有个红灯.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月14日 5:26 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/13/n11520058.md#1" target="_blank">什么是机油质量监测仪？</a><br></h3>如果你驾驶汽车，你可能已经无数次地听到过这样的建议：确保你的车辆定期更换机油以保证发动机的使用寿命。
 
-需要定期更换机油，是因为机油的使用寿命有限。老化、被污染或者含有金属屑的机油会损坏发动机内部的运动部件。润滑油的黏度也会由于老化和污染而降低，使其不能起到保护发动机零件的作用。
 
-你可以自己在家里换油。但是.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月14日 5:20 AM			</td></tr>
+
+
+但南加州的华人移民多，到了中秋，可以在超市买到月饼，不同城市也都有庆祝中秋的活动。9月7日至8日，洛杉矶新唐人大纪元在亚凯迪亚市（Arcadia）跑马场（Santa Anita Park）举.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月11日 2:06 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/11/n11513152.md#1" target="_blank">日本小学篮球赛 最后一秒胜负大逆转</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/11/n11513152.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/Fotolia_95602139_Subscription_L-150x120.jpg" align ="left"></a>人们常说：“球是圆的。”这意味着比赛不到最后一刻，分不出胜负，所以要一直奋战不懈。几年前在日本就有一场小学篮球比赛，直到最后一秒钟才出现逆转性的结局，可谓替这句话做了良好的诠释。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月11日 1:59 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/11/n11513030.md#1" target="_blank">重要免疫细胞发现者 终获“美国诺贝尔”奖</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/11/n11513030.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-948040076-150x120.jpg" align ="left"></a>9月10日，墨尔本最杰出的一位科学家雅克?米勒（Jacques Miller）教授被授予拉斯克奖（Lasker Award）。该奖项素有“美国诺贝尔”的美誉，是全球最高奖项之一。这两位科学家在20世纪60年代发现了T细胞和B细胞以及它们在人体免疫系统中的重要作用，为之后研发疫苗、治疗自体免疫性疾病以及用以治疗癌症的免疫.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月11日 10:55 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/10/n11512433.md#1" target="_blank">提升房子外在吸引力的简单方法</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/10/n11512433.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/11/single-famiy-house-iStock-150x120.jpg" align ="left"></a>把房子外面收拾的干净、整洁，对潜在买家更具吸引力。第一印象很重要，当你要卖掉你的房子时，从照片上看你的房产外观的样子，能吸引潜在的买家进来看看，还是他们一带而过。这是最重要的。把你的前门漆成明亮灵动的颜色，也可以提升你家房子的吸引力。你不需要花钱把景观美化一遍，但只要把室外打扫干净，就会大大提高你的房子对潜在买家的吸引.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月11日 7:45 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/10/n11512492.md#1" target="_blank">大温哥华最好的新兴社区在哪里？</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/10/n11512492.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/05/4a43f9d0b317d300680477e13f889bb2-150x120.jpg" align ="left"></a>随着大温哥华地区的房地产价格位居加拿大最高之列，购房者越来越看重的不仅仅是房产本身的价值，生活质量正成为找到合适社区的一个关键因素。根据2019年最适宜居住的地方报告，60%的加拿大人将购物、餐饮和绿色空间的便捷性列为最适合居住的标准。靠近公共交通、工作、首选学校、文化和社区中心也被列为重要因素，因为加拿大人三分之二以.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月11日 7:41 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/10/n11512657.md#1" target="_blank">发生火灾保命的第一件事 消防员：不是先灭火</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/10/n11512657.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/fire_372468979-150x120.jpg" align ="left"></a>在火灾现场逃生，是一场与时间、死神的赛跑。失火后，当下要先灭火？逃离？报案？身处火场，如何逃生才能保命？资深消防员指出，发生火灾时，人们做的“第一件事”，可能影响生命安危。示警后，在逃生应变中，最重要的是想办法躲避浓烟。因为，浓烟是火场的“头号杀手”。多数火场罹难者并非死于大火燃烧，而是遭浓烟呛昏后而死。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月11日 5:54 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/21/n11466823.md#1" target="_blank">Dammion 新张酬宾</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/21/n11466823.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/e5ba92a84f8aea439837637056cab444-150x120.jpg" align ="left"></a>Dammion韩餐厅法拉盛新店开业，秉承维吉尼亚姐妹版韩餐馆一样的经营理念“把菜肴烹饪好、食客自会来”，连厨师长都是维吉尼亚姐妹餐厅最有经验的大厨。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月11日 3:36 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2008_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2008.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2008_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2008_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2008_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2008_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/asdfghy6/djy/blob/master/gb/news2008_4.md#1<br><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2008_4.md#1"><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=10&t=&d=https://github.com/asdfghy6/djy/blob/master/gb/news2008_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2008_4.htm">http://www.epochtimes.com/gb/news2008_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
